--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -3,6 +3,7 @@ $white-color: #fff;
 $gray-light-color: #c1c1ca;
 $gray-color: #787880;
 $green-color: #8fcb5d;
+$title-color: rgb(185, 118, 118);
 
 // media
 
